Fix z-index

--- a/src/styles/components/_issues.scss
+++ b/src/styles/components/_issues.scss
@@ -128,7 +128,7 @@ a[href*="activity"][title*=":"] {
 
       .journal-actions, a.journal-link {
         position: relative;
-        z-index: 30;
+        z-index: 5;
       }
     }
 
